# rumake

./: .gitignore  .travis.yml  Cargo.toml  README.md
fixtures/: example.yaml  rumake-completion.bash  sample.yaml
src/: arguments.rs  config.rs  main.rs  parser.rs  runner.rs  variables.rs
tests/: tasks.sh
